// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Error Message Component should render with empty props 1`] = `
<body>
  <div>
    <div
      class="skz-error-message svelte-jok4ho"
    >
      <p
        class="svelte-jok4ho"
      >
        
      </p>
       
      <button
        class="svelte-jok4ho"
      >
        Retry
      </button>
    </div>
  </div>
</body>
`;

exports[`Testing Error Message Component should render with label 1`] = `
<body>
  <div>
    <div
      class="skz-error-message svelte-jok4ho"
    >
      <p
        class="svelte-jok4ho"
      >
        An error occurred!
      </p>
       
      <button
        class="svelte-jok4ho"
      >
        Retry
      </button>
    </div>
  </div>
</body>
`;
